2008-04-12 Eric Sandall <sandalle@sourcemage.org>
	* PRE_BUILD: Apply gcc43.patch
	  Do not run ./configure via autogen.sh
	* gcc43.patch: Adhere to GCC 4.3.0 strictness

2007-09-29 Arwed v. Merkatz <v.merkatz@gmx.net>
	* PRE_BUILD: brought back the ./autogen.sh needed for the cvs version,
	  added sedits to install stuff in correct locations (/usr/games and
	  /usr/share/man)
	* CONFIGURE: added --disable-release to the query so the answer is
	  remembered on the next cast

2007-04-18 David Kowis <dkowis@shlrm.org>
	* DETAILS: version bumped to 1.51, now it builds on xorg-modular systems
	  Reset the patchlevel
	* *.patch: removed as no longer apply
	* PRE_BUILD: removed, because nothing to do
	* CONFIGURE, BUILD: added --omg-optimize

2006-09-21 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: [automated] Removed BUILD_API=2.

2006-08-27 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: update the cvs url for sf brokeness

2006-08-15 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: [automated] Removed UPDATED (deprecated in favor of 
	  PATCHLEVEL).

2006-04-18 Arwed v. Merkatz <v.merkatz@gmx.net>
	* DETAILS: PATCHLEVEL=1
	* PRE_BUILD, zsnes-memfix.patch: fix for a bug that causes a crash
	  on startup on glibc 2.4

2005-11-22 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* PREPARE: added CVS option
	* DETAILS: added CVS option
	* DEPENDS: added CVS option nad OPENGL and libpng
	  seem to be optional
	* PRE_BUILD: added, CVS option, some patching
	* BUILD: modified to use default_games_build
	* INSTALL: removed
	* Makefile.in.FIX.BROKENESS.patch: added
	* Makefile.in.FIX.BROKENESS-plain.patch: added

2005-03-16 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.42

2005-01-16 Andraž "ruskie" Levstik <ruskie@mages.ath.cx>
	* DETAILS: Minor bugfix of SOURCE_DIRECTORY bug #7963

2005-01-08 Eric Sandall <sandalle@sourcemage.org>
	* DETAILS: Updated to 1.40
	  SOURCE_DIRECTORY changed
	  Removed MAINTAINER
	  Added BUILD_API=2