@@ -16,7 +16,7 @@ else
           SOURCE=${SPELL}${VERSION/./}src.tar.bz2
    SOURCE_URL[0]=$SOURCEFORGE_URL/$SPELL/$SOURCE
 SOURCE_DIRECTORY=$BUILD_DIRECTORY/${SPELL}_${VERSION/\./_}
-     SOURCE_HASH=sha512:2cec9ad7762fc7a257c6b1d3e190b0ed53565dbafe42e1dee9eb182644392b7dd2c57faa846f63cd30ac079e5c05354d26ce0612d20481a1f54d760d62d95353
+     SOURCE_HASH=sha512:b10373cf81b201a33dc60c728431d4f69d36de31fcf6f137b623ea206a2998f722dcd6132daec1d0bf14a05ae52f3ee9ecee4334517039be554db85c9f7b8274
 fi
         WEB_SITE=http://zsnes.com/
          ENTERED=20020312
